RS-XX: Update rs-core/pom.xml for Java 11